Implement migration for v2.1.2
This migration writes the current version number to the data directory.
The remaining migrations depend on another open PR and will follow soon.