@@ -1,11 +1,11 @@
 package bisq.application.migration;
 
 import bisq.application.migration.migrations.Migration;
+import bisq.application.migration.migrations.MigrationsForV2_1_2;
 import bisq.common.platform.Version;
 import lombok.extern.slf4j.Slf4j;
 
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -17,7 +17,7 @@ public class Migrator {
     public Migrator(Version appVersion, Path dataDir) {
         this.appVersion = appVersion;
         this.dataDir = dataDir;
-        this.allMigrations = Collections.emptyList();
+        this.allMigrations = List.of(new MigrationsForV2_1_2());
     }
 
     public void migrate() {
